--- a/generators/templates/line_chart/child_template.html
+++ b/generators/templates/line_chart/child_template.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-    {% if COPY.labels.headline %}<h1>{{ COPY.labels.headline|smarty }}</h1>{% endif %}
-    {% if COPY.labels.subhed %}<h2>{{ render(COPY.labels.subhed)|smarty }}</h2>{% endif %}
+    {% if COPY.labels.headline %}<h1>{{ COPY.labels.headline|safe }}</h1>{% endif %}
+    {% if COPY.labels.subhed %}<h2>{{ COPY.labels.subhed|safe }}</h2>{% endif %}
 
     <div id="line-chart" class="graphic">
         <img src="fallback.png" alt="[Chart]" class="fallback" />
@@ -12,17 +12,17 @@
     {% if COPY.labels.footnote %}
     <div class="footnotes">
         <h4>Notes</h4>
-        <p>{{ COPY.labels.footnote|smarty }}</p>
+        <p>{{ COPY.labels.footnote }}</p>
     </div>
     {% endif %}
 
     <div class="footer">
-        {% if COPY.labels.source %}<p>Source: {{ COPY.labels.source|smarty }}</p>{% endif %}
-        {% if COPY.labels.credit %}<p>Credit: {{ COPY.labels.credit|smarty }}</p>{% endif %}
+        {% if COPY.labels.source %}<p>Source: {{ COPY.labels.source }}</p>{% endif %}
+        {% if COPY.labels.credit %}<p>Credit: {{ COPY.labels.credit }}</p>{% endif %}
     </div>
 
     <script type="text/javascript">
-        var DATA = {{ COPY.data.json() }};
+        var DATA = {{ COPY.data|dump|safe }};
     </script>
 
 {% endblock content %}
