--- a/generators/templates/line_chart/parent_template.html
+++ b/generators/templates/line_chart/parent_template.html
@@ -108,7 +108,7 @@
 
     <header class="parent-header">
         <div class="segment">
-            <h1 class="{{ DEPLOYMENT_TARGET or 'localhost' }}">{{ CONFIG.DEPLOYMENT_TARGET or 'localhost' }}</h1>
+            <h1 class="{{ CONFIG.DEPLOYMENT_TARGET }}">{{ CONFIG.DEPLOYMENT_TARGET }}</h1>
         </div>
 
         <div class="segment">
